syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Streamfair/streamfair_session_svc/pb/session";

message Session {
    Uuid id = 1;
    string username = 2;
    string refresh_token = 3;
    string user_agent = 4;
    string client_ip = 5;
    bool is_blocked = 6;
    google.protobuf.Timestamp expires_at = 7;
    google.protobuf.Timestamp created_at = 8;
}

// A UUID, encoded in accordance with section 4.1.2 of RFC 4122.
message Uuid {
    // The high 64 bits of the UUID - MSB -> LSB: time_low (32 bits) | time_mid (16 bits) | time_hi_and_version (16 bits).
    fixed64 high64 = 1;
    // The low 64 bits of the UUID - MSB -> LSB: clock_seq_hi_and_reserved (8 bits) | clock_seq_low (8 bits) | node (48 bits).
    fixed64 low64 = 2;
}